edited content of footer and styled it

--- a/index.html
+++ b/index.html
@@ -21,9 +21,47 @@
         <a href="#more">Learn more</a>
       </header>
       <footer>
-        This project was coded by Magdalena Korgul and is open sourced on
-        <a href="https://github.com/magdakorgul/krakow-travel-project">Github</a
-        >.
+        <section class="grid">
+          <div>
+            <h3>More about Kraków</h3>
+            <ul>
+              <li>
+                <a href="https://krakowairport.pl/pl" target="_blank"
+                  >Kraków airport website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.google.com/maps/place/Krak%C3%B3w,+Polska/data=!4m2!3m1!1s0x471644c0354e18d1:0xb46bb6b576478abf?sa=X&ved=2ahUKEwiU2PnT6puCAxXL3gIHHTUTBr0Q8gF6BAgPEAA&ved=2ahUKEwiU2PnT6puCAxXL3gIHHTUTBr0Q8gF6BAgQEAI"
+                  target="_blank"
+                  >Map of Kraków</a
+                >
+              </li>
+              <li>
+                <a href="https://www.mpk.krakow.pl/en/" target="_blank"
+                  >Public transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Magda and I'm a fan of cities with soul. I've
+              created this page so that you can get to know more about my
+              favorite Polish city, Kraków.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              This project was coded by Magdalena Korgul and is open sourced on
+              <a href="https://github.com/magdakorgul/krakow-travel-project"
+                >Github</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
