added and styled another section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <main>
         <section class="grid grid-2-columns">
           <div>
-            <img src="/src/photos/krakow-rynek.jpeg" alt="krakow rynek" />
+            <img
+              src="/src/photos/krakow-rynek.jpeg"
+              alt="krakow rynek"
+              class="img-responsive" />
           </div>
           <div>
             <h3>Why Kraków?</h3>
@@ -41,6 +44,50 @@
               regal past, and visit the awe-inspiring St. Mary's Basilica, a
               masterpiece of Gothic architecture.
             </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h3 class="text-center">Cafes</h3>
+          <h2 class="text-center">My favorite cafes in Kraków</h2>
+          <div class="grid grid-columns-cafe">
+            <div class="card">
+              <img src="/src/photos/cafe1.jpeg" alt="" class="img-responsive" />
+              <h4>Cafe Mellow Moments</h4>
+              <p>
+                Nestled in the heart of Krakow, Café Mellow Moments is a cozy
+                retreat, adorned with vintage décor and the aroma of freshly
+                brewed coffee. Indulge in delightful pastries and artisanal
+                blends, while soaking in the warm ambiance that makes every
+                moment here a serene escape from the city buzz.
+              </p>
+              <a href="" class="btn">Check it</a>
+            </div>
+            <div class="card">
+              <img src="/src/photos/cafe2.jpeg" alt="" />
+              <h4>Bohemian Blend Café</h4>
+              <p>
+                At Bohemian Blend Café, creativity knows no bounds. This
+                eclectic spot in Krakow doubles as an art gallery, showcasing
+                local talent while serving up exquisite coffee concoctions. Sip
+                on a velvety latte amidst the inspiring artworks, and let the
+                fusion of flavors and artistry elevate your senses to new
+                heights.
+              </p>
+              <a href="" class="btn">Check it</a>
+            </div>
+            <div class="card">
+              <img src="/src/photos/cafe3.jpeg" alt="" />
+              <h4>Urban Oasis Café</h4>
+              <p>
+                Urban Oasis Café is more than just a coffee haven; it's a
+                commitment to sustainability. With ethically sourced beans and
+                eco-friendly practices, this café in Krakow offers guilt-free
+                indulgence. Enjoy your favorite brew in a relaxed atmosphere,
+                knowing that every sip supports local farmers and contributes to
+                a greener, brighter future.
+              </p>
+              <a href="" class="btn">Check it</a>
+            </div>
           </div>
         </section>
       </main>
